--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Gridwell — a modular admin panel for organizing projects with sidebar navigation, categories, resizable layers, and dynamic spreadsheet tables." />
-  <meta name="theme-color" content="#007bff" />
+  <meta name="theme-color" content="#3b82f6" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <title>Gridwell — Modular Layout & Data Manager</title>
 </head>
 
